bug: scrollbars on section

--- a/src/scss/skill-set.scss
+++ b/src/scss/skill-set.scss
@@ -33,7 +33,11 @@
     }
 
     .underline--magical {
-      background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+      background-image: linear-gradient(
+        120deg,
+        #84fab0 0%,
+        #8fd3f4 100%
+      );
       background-repeat: no-repeat;
       background-size: 100% 0.2em;
       background-position: 0 105%;
@@ -77,6 +81,7 @@
       font-weight: bold;
       height: 100%;
       margin: auto;
+      overflow-y: hidden;
       padding: 15px 25px 10px;
       position: relative;
       text-align: center;
@@ -126,7 +131,8 @@
   }
 
   .art {
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5) inset;
+    box-shadow: 0px 0px 10px 0px
+      rgba(0, 0, 0, 0.5) inset;
     display: flex;
     height: 100%;
     margin: auto;
@@ -139,7 +145,8 @@
       top: 0;
       width: 100%;
       height: 100%;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5) inset;
+      box-shadow: 0px 0px 20px 0px
+        rgba(0, 0, 0, 0.5) inset;
     }
 
     img {
